# docs/openapi.json
@@ -25,6 +25,10 @@
     {
       "name": "greenhouse",
       "description": "Everything about the greenhouses."
+    },
+    {
+      "name": "health",
+      "description": "Everything about the health of this api."
     }
   ],
   "paths": {
@@ -518,6 +522,27 @@
           }
         }
       }
+    },
+    "/health": {
+      "get": {
+        "tags": [
+          "health"
+        ],
+        "summary": "Health of the API.",
+        "operationId": "getHealth",
+        "responses": {
+          "200": {
+            "description": "Successful operation.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Healthy"
+                }
+              }
+            }
+          }
+        }
+      }
     }
   },
   "components": {
@@ -759,6 +784,18 @@
           "type",
           "timestamp",
           "value"
+        ]
+      },
+      "Healthy": {
+        "type": "object",
+        "properties": {
+          "healthy": {
+            "type": "boolean",
+            "default": true
+          }
+        },
+        "required": [
+          "healthy"
         ]
       },
       "ApiErrorResponse": {
